@@ -45,6 +45,8 @@ Pint Changelog
   (PR #1949)
 - Fix unhandled TypeError when auto_reduce_dimensions=True and non_int_type=Decimal
   (PR #1853)
+- Creating prefixed offset units now raises an error.
+  (PR #1998)
 - Improved error message in `get_dimensionality()` when non existent units are passed.
   (PR #1874, Issue #1716)
 
